--- a/HomeAutomationLibraries-master/Power_Controller/Power_Controller.csproj
+++ b/HomeAutomationLibraries-master/Power_Controller/Power_Controller.csproj
@@ -4,16 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6FC3E203-9513-4F12-9966-B41F31A6396E}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>KeyEventsAtConsole</RootNamespace>
-    <AssemblyName>KeyEventsAtConsole</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <ProjectGuid>{D8D29E13-AB78-4A41-AC83-227B7D0622C3}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Power_Controller</RootNamespace>
+    <AssemblyName>Power_Controller</AssemblyName>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,20 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="KeyEvents.cs" />
+    <Compile Include="PowerController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CommonController\CommonController.csproj">
       <Project>{3b53484e-e9f7-41dc-bf90-d93389d4e2ea}</Project>
       <Name>CommonController</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeaterController\HeaterController.csproj">
-      <Project>{cdc27552-2a35-4885-b458-868aa8f3dec1}</Project>
-      <Name>HeaterController</Name>
+    <ProjectReference Include="..\HardConfig\HardConfig.csproj">
+      <Project>{5d49f2ea-7a48-4d68-badc-a40414ff7fd7}</Project>
+      <Name>HardConfig</Name>
     </ProjectReference>
     <ProjectReference Include="..\TimerMockable\TimerMockable.csproj">
       <Project>{323a5aa7-f7eb-4990-9b0e-540d75837716}</Project>
