--- a/HomeAutomationLibraries-master/CommonController_UnitTests/CommonController_UnitTests.csproj
+++ b/HomeAutomationLibraries-master/CommonController_UnitTests/CommonController_UnitTests.csproj
@@ -40,7 +40,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Moq">
-      <HintPath>..\HardConfig\bin\Release\Moq.dll</HintPath>
+      <HintPath>..\DLL\Moq.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.3.9.0\lib\net45\nunit.framework.dll</HintPath>
