--- a/HomeAutomationLibraries-master/LibUdp/packages.config
+++ b/HomeAutomationLibraries-master/LibUdp/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.2.0" targetFramework="net452" />
-  <package id="Moq" version="4.7.137" targetFramework="net452" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net451" />
+  <package id="Moq" version="4.10.1" targetFramework="net451" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net451" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net451" />
 </packages>
