--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ Thumbs.db
 *.dotCover
 *.lock
 /HomeAutomationLibraries-master/PowerController_UnitTest/PowerController_UnitTest.csproj.bak
+/HomeAutomationLibraries-master/.vs/HomeAutomationLibraryCollection/v16/TestStore/0/000.testlog
+/HomeAutomationLibraries-master/.vs/HomeAutomationLibraryCollection/v16/TestStore/0/testlog.manifest
